Amazon Cognito Iteration

--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/auth": "^6.10.1",
+    "@aws-amplify/core": "^6.9.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "@mui/system": "^6.3.0",
+    "aws-amplify": "^6.12.2",
     "aws-sdk": "^2.1692.0",
     "cra-template": "1.2.0",
     "framer-motion": "^11.15.0",
